--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,20 @@ owner: sladerx4 # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
+  - name: Interface
+    url: http://interfacenet.com.ar/
+  - name: Ctear
+    url: http://ctear.com.ar/
+  - name: CobroDigital
+    url: https://cobrodigital.com/
+  - name: Facebook
+    url: https://www.facebook.com/
   - name: Google
     url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Instagram
+    url: https://www.instagram.com/
+  - name: Steam
+    url: https://store.steampowered.com/
 
 assignees:
   - sladerx4
@@ -21,11 +27,11 @@ status-website:
   # cname: demo.upptime.js.org
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: sladerx Upptime
+  introTitle: "**Upptime** servicio de monitoreo de estado y uptime de paginas "
+  introMessage: Monitoreo del estado de paginas propias y de paginas de importancia
   navbar:
-    - title: Status
+    - title: Estado
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
